5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1764_674.log
== SUBMITION (2019-05-23 16:54:20) 
-- CODE:
from numpy import

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.200323
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:54:36) 
-- CODE:
from numpy import

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:54:45) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.115947
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:54:50) 
-- CODE:
from numpy import *

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:54:52) 
-- CODE:
from numpy import *

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.176812
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:54:53) 
-- CODE:
from numpy import *

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:54:53) 
-- CODE:
from numpy import *

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.129895
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:54:53) 
-- CODE:
from numpy import *

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:55:09) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:55:21) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.146225
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:55:22) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:56:08) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.167842
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:56:09) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.177843
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:56:09) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.250843
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:56:09) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.242941
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1764/674/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:56:10) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:58:25) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.159952
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:58:27) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.286116
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:58:27) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.142293
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:27) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:28) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:28) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:58:28) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:59:07) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.151018
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:59:08) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.111334
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:08) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:08) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:08) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:59:08) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- EXECUTION TIME:
0.12358
-- ERROR:
  File "/home/codebench/codes/1764/674/main.py", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:08) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:09) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:59:09) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:44:57) 
-- CODE:
from numpy import*

v= array(eval(input("digite o v: "))
			print(size(v))
			print(v[0])
			print(v[-1])
			print(max(v))
			print(min(v))
			print(sum(v))
			print(round(sum(v) / size(v), 2))
-- ERROR:
File "XXXX", line 4
    print(size(v))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
